--- a/index.html
+++ b/index.html
@@ -2,130 +2,170 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vertigo - مدیریت میزهای بازی</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vertigo - مدیریت میزها</title>
   <style>
+    :root {
+      --bg: #f9f9f9;
+      --text: #111;
+      --card-bg: #fff;
+      --shadow: rgba(0, 0, 0, 0.1);
+      --button: #007bff;
+      --button-hover: #0056b3;
+      --settled: #28a745;
+      --watermark: rgba(0, 0, 0, 0.05);
+    }
+
+    body.dark {
+      --bg: #1e1e1e;
+      --text: #f1f1f1;
+      --card-bg: #2b2b2b;
+      --shadow: rgba(255, 255, 255, 0.05);
+      --button: #4e9cff;
+      --button-hover: #2a76d2;
+      --settled: #45c16a;
+      --watermark: rgba(255, 255, 255, 0.03);
+    }
+
     body {
-      font-family: 'Vazir', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      font-family: sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f0f0f0;
-      transition: background 0.4s, color 0.4s;
+      padding: 20px;
+      transition: background 0.3s, color 0.3s;
       position: relative;
+      overflow-x: hidden;
     }
 
     body::before {
-      content: "VERTIGO";
+      content: "Vertigo";
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%) rotate(-30deg);
-      font-size: 5rem;
-      color: rgba(0, 0, 0, 0.05);
+      font-size: 80px;
+      color: var(--watermark);
       z-index: 0;
       pointer-events: none;
       white-space: nowrap;
+      animation: floatText 6s ease-in-out infinite alternate;
     }
 
-    .dark {
-      background: #1e1e1e;
-      color: #f5f5f5;
+    @keyframes floatText {
+      0%   { transform: translate(-50%, -50%) rotate(-30deg) scale(1); }
+      100% { transform: translate(-48%, -52%) rotate(-30deg) scale(1.05); }
     }
 
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding: 1rem;
-      position: relative;
-      z-index: 1;
-    }
-
-    .table {
-      background: white;
-      margin-bottom: 1rem;
-      padding: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    h1 {
       text-align: center;
-      transition: background 0.4s, color 0.4s;
-    }
-
-    .dark .table {
-      background: #2c2c2c;
-    }
-
-    button {
-      padding: 0.5rem 1rem;
-      margin: 0.3rem;
-      border: none;
-      border-radius: 6px;
-      background: #3498db;
-      color: white;
-      cursor: pointer;
-      transition: transform 0.2s ease, background 0.3s;
-    }
-
-    button:hover {
-      transform: scale(1.05);
-      background: #2980b9;
-    }
-
-    .settled {
-      background: #2ecc71 !important;
+      margin-bottom: 20px;
     }
 
     #mode-toggle {
-      position: fixed;
+      position: absolute;
       top: 10px;
       left: 10px;
-      font-size: 1.4rem;
-      background: none;
+      background: transparent;
       border: none;
+      font-size: 22px;
       cursor: pointer;
-      z-index: 100;
-      animation: pulse 1.5s infinite;
+      z-index: 10;
+      transition: transform 0.5s ease;
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-      100% { transform: scale(1); }
+    #mode-toggle.rotate {
+      transform: rotate(180deg);
     }
 
-    #end-day {
-      display: block;
-      margin: 2rem auto;
-      background: #e74c3c;
+    #tables {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .table {
+      background: var(--card-bg);
+      border-radius: 12px;
+      padding: 16px;
+      box-shadow: 0 2px 8px var(--shadow);
+      position: relative;
+      z-index: 1;
+      animation: fadeInUp 0.6s ease forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .table h2 { margin: 0 0 10px; font-size: 18px; }
+    .table p { margin: 6px 0; font-size: 14px; }
+
+    .table input {
+      width: 100%;
+      margin-top: 4px;
+      padding: 6px;
+      font-size: 14px;
+      background: transparent;
+      color: var(--text);
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .btn-group {
+      margin-top: 10px;
+    }
+
+    .btn-group button {
+      padding: 8px 12px;
+      font-size: 14px;
+      margin: 4px 4px 0 0;
+      border: none;
+      border-radius: 8px;
+      background-color: var(--button);
+      color: white;
+      cursor: pointer;
+      transition: transform 0.2s, background-color 0.3s;
+    }
+
+    .btn-group button:hover {
+      background-color: var(--button-hover);
+      transform: scale(1.05);
+    }
+
+    .settled {
+      background-color: var(--settled) !important;
     }
 
     #total {
+      margin-top: 20px;
       text-align: center;
-      margin-top: 1rem;
       font-weight: bold;
+      font-size: 16px;
     }
 
-    #report {
-      margin-top: 1rem;
-      background: #f39c12;
-      padding: 0.5rem;
-      border-radius: 8px;
-      text-align: center;
+    @media (max-width: 600px) {
+      .table h2 { font-size: 16px; }
+      .table p, input, button { font-size: 13px; }
     }
   </style>
 </head>
 <body>
   <button id="mode-toggle">🌙</button>
-  <div class="container">
-    <h1 style="text-align: center;">مدیریت میزهای بازی</h1>
-    <div id="tables"></div>
-    <button onclick="addTable()">افزودن میز جدید</button>
-    <div id="total">جمع درآمد امروز: <span id="total-income">0</span> تومان</div>
-    <div id="report">گزارش تسویه شده‌ها: <span id="report-total">0</span> تومان</div>
-    <button id="end-day" onclick="endDay()">پایان روز کاری</button>
-  </div>
+  <h1>مدیریت میزهای بازی</h1>
+  <div id="tables"></div>
+  <div id="total">جمع درآمد امروز: <span id="total-income">0</span> تومان</div>
 
   <script>
-    let tables = JSON.parse(localStorage.getItem("tables")) || [
+    const tableData = JSON.parse(localStorage.getItem("tables")) || [
       { id: 1, type: 'PS5', rate: 45000 },
       { id: 2, type: 'PS5', rate: 45000 },
       { id: 3, type: 'PS5', rate: 45000 },
@@ -134,132 +174,108 @@
       { id: 6, type: 'بیلیارد', rate: 100000 }
     ];
 
-    let totalIncome = parseInt(localStorage.getItem("totalIncome")) || 0;
-    let reportTotal = parseInt(localStorage.getItem("reportTotal")) || 0;
-    let startTimes = {};
+    let totalIncome = parseInt(localStorage.getItem("income")) || 0;
+    let startTimes = JSON.parse(localStorage.getItem("startTimes")) || {};
+    let endTimes = JSON.parse(localStorage.getItem("endTimes")) || {};
 
-    const tableContainer = document.getElementById('tables');
-    const totalIncomeEl = document.getElementById("total-income");
-    const reportTotalEl = document.getElementById("report-total");
-
-    function saveState() {
-      localStorage.setItem("tables", JSON.stringify(tables));
-      localStorage.setItem("totalIncome", totalIncome);
-      localStorage.setItem("reportTotal", reportTotal);
-    }
+    const container = document.getElementById("tables");
 
     function renderTable(table) {
-      const div = document.createElement('div');
-      div.className = 'table';
+      const div = document.createElement("div");
+      div.className = "table";
       div.id = `table-${table.id}`;
       div.innerHTML = `
         <h2>میز ${table.id} (${table.type})</h2>
-        <label>هزینه هر ساعت: <input type="number" id="rate-${table.id}" value="${table.rate}"></label><br>
-        <p>زمان شروع: <span id="start-${table.id}">--:--:--</span></p>
-        <p>زمان پایان: <span id="end-${table.id}">--:--:--</span></p>
-        <p>مدت: <span id="duration-${table.id}">0:00</span></p>
+        <label>هزینه هر ساعت: <input type="number" id="rate-${table.id}" value="${table.rate}"></label>
+        <p>زمان شروع: <span id="start-${table.id}">${startTimes[table.id] ? new Date(startTimes[table.id]).toLocaleTimeString('fa-IR') : '--:--:--'}</span></p>
+        <p>زمان پایان: <span id="end-${table.id}">${endTimes[table.id] ? new Date(endTimes[table.id]).toLocaleTimeString('fa-IR') : '--:--:--'}</span></p>
+        <p>تایمر: <span id="timer-${table.id}">00:00:00</span></p>
         <p>هزینه: <span id="cost-${table.id}">0</span> تومان</p>
-        <button onclick="startGame(${table.id})">شروع</button>
-        <button onclick="endGame(${table.id})">پایان</button>
-        <button id="settle-${table.id}" onclick="settle(${table.id})">تسویه</button>
+        <div class="btn-group">
+          <button onclick="startGame(${table.id})">شروع</button>
+          <button onclick="endGame(${table.id})">پایان</button>
+          <button id="settle-${table.id}" onclick="settle(${table.id})">تسویه</button>
+        </div>
       `;
-      tableContainer.appendChild(div);
+      container.appendChild(div);
     }
-
-    tables.forEach(renderTable);
-    totalIncomeEl.textContent = totalIncome.toLocaleString();
-    reportTotalEl.textContent = reportTotal.toLocaleString();
 
     function startGame(id) {
       const now = new Date();
       startTimes[id] = now;
       document.getElementById(`start-${id}`).textContent = now.toLocaleTimeString('fa-IR');
+      localStorage.setItem("startTimes", JSON.stringify(startTimes));
     }
 
     function endGame(id) {
-      const now = new Date();
-      const start = startTimes[id];
-      if (!start) {
-        alert('لطفاً ابتدا دکمه شروع را بزنید.');
+      if (!startTimes[id]) {
+        alert("لطفاً ابتدا دکمه شروع را بزنید.");
         return;
       }
+      const now = new Date();
+      endTimes[id] = now;
       document.getElementById(`end-${id}`).textContent = now.toLocaleTimeString('fa-IR');
-      const diffMs = now - start;
       const rate = parseInt(document.getElementById(`rate-${id}`).value);
-      const diffHours = diffMs / (1000 * 60 * 60);
-      const cost = Math.ceil(diffHours * rate);
+      const diff = new Date(now) - new Date(startTimes[id]);
+      const hours = diff / (1000 * 60 * 60);
+      const cost = Math.ceil(hours * rate);
       document.getElementById(`cost-${id}`).textContent = cost.toLocaleString();
-      document.getElementById(`duration-${id}`).textContent = formatDuration(diffMs);
       totalIncome += cost;
-      totalIncomeEl.textContent = totalIncome.toLocaleString();
-      saveState();
+      document.getElementById("total-income").textContent = totalIncome.toLocaleString();
+      localStorage.setItem("income", totalIncome);
+      localStorage.setItem("endTimes", JSON.stringify(endTimes));
     }
 
     function settle(id) {
-      const cost = parseInt(document.getElementById(`cost-${id}`).textContent.replace(/,/g, '')) || 0;
-      reportTotal += cost;
-      reportTotalEl.textContent = reportTotal.toLocaleString();
       document.getElementById(`start-${id}`).textContent = "--:--:--";
       document.getElementById(`end-${id}`).textContent = "--:--:--";
+      document.getElementById(`timer-${id}`).textContent = "00:00:00";
       document.getElementById(`cost-${id}`).textContent = "0";
-      document.getElementById(`duration-${id}`).textContent = "0:00";
       document.getElementById(`settle-${id}`).textContent = "تسویه شد";
       document.getElementById(`settle-${id}`).classList.add("settled");
       delete startTimes[id];
-      saveState();
+      delete endTimes[id];
+      localStorage.setItem("startTimes", JSON.stringify(startTimes));
+      localStorage.setItem("endTimes", JSON.stringify(endTimes));
     }
 
-    function addTable() {
-      const type = prompt("نوع میز را وارد کنید (مثلاً PS5 یا بیلیارد):", "PS5");
-      if (!type) return;
-      const rate = type === 'بیلیارد' ? 100000 : 45000;
-      const newId = tables.length + 1;
-      const newTable = { id: newId, type, rate };
-      tables.push(newTable);
-      renderTable(newTable);
-      saveState();
-    }
-
-    function formatDuration(ms) {
-      const totalSeconds = Math.floor(ms / 1000);
-      const minutes = Math.floor(totalSeconds / 60);
-      const seconds = totalSeconds % 60;
-      return `${minutes}:${seconds.toString().padStart(2, '0')}`;
-    }
-
-    function endDay() {
-      if (confirm("آیا از پایان روز کاری مطمئن هستید؟ مقادیر صفر می‌شوند.")) {
-        alert(`درآمد امروز گیم‌نت Vertigo: ${totalIncome.toLocaleString()} تومان\nروز کاری تمام شد.`);
-        totalIncome = 0;
-        reportTotal = 0;
-        localStorage.removeItem("tables");
-        localStorage.removeItem("totalIncome");
-        localStorage.removeItem("reportTotal");
-        location.reload();
+    function updateTimers() {
+      for (let id in startTimes) {
+        if (endTimes[id]) continue;
+        const start = new Date(startTimes[id]);
+        const now = new Date();
+        const diff = now - start;
+        const h = Math.floor(diff / 3600000).toString().padStart(2, '0');
+        const m = Math.floor((diff % 3600000) / 60000).toString().padStart(2, '0');
+        const s = Math.floor((diff % 60000) / 1000).toString().padStart(2, '0');
+        const timerEl = document.getElementById(`timer-${id}`);
+        if (timerEl) timerEl.textContent = `${h}:${m}:${s}`;
       }
     }
 
-    // تم تاریک با حافظه localStorage
-    const toggle = document.getElementById("mode-toggle");
+    tableData.forEach(renderTable);
+    setInterval(updateTimers, 1000);
+    document.getElementById("total-income").textContent = totalIncome.toLocaleString();
+    localStorage.setItem("tables", JSON.stringify(tableData));
 
-    function applyTheme() {
-      const theme = localStorage.getItem("theme");
-      if (theme === "dark") {
+    const toggleBtn = document.getElementById("mode-toggle");
+    toggleBtn.addEventListener("click", () => {
+      document.body.classList.toggle("dark");
+      toggleBtn.classList.toggle("rotate");
+      const mode = document.body.classList.contains("dark") ? "dark" : "light";
+      toggleBtn.textContent = mode === "dark" ? "☀️" : "🌙";
+      localStorage.setItem("mode", mode);
+    });
+
+    // load mode
+    window.addEventListener("load", () => {
+      const savedMode = localStorage.getItem("mode");
+      if (savedMode === "dark") {
         document.body.classList.add("dark");
-        toggle.textContent = "☀️";
-      } else {
-        document.body.classList.remove("dark");
-        toggle.textContent = "🌙";
+        toggleBtn.textContent = "☀️";
+        toggleBtn.classList.add("rotate");
       }
-    }
-
-    applyTheme();
-
-    toggle.addEventListener("click", () => {
-      const isDark = document.body.classList.toggle("dark");
-      localStorage.setItem("theme", isDark ? "dark" : "light");
-      toggle.textContent = isDark ? "☀️" : "🌙";
     });
   </script>
 </body>
-  </html>
+</html>
