--- a/index.html
+++ b/index.html
@@ -2,130 +2,103 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vertigo - مدیریت میزهای بازی</title>
   <style>
     body {
-      font-family: 'Vazir', sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: 'Tahoma', sans-serif;
       background: #f0f0f0;
-      transition: background 0.4s, color 0.4s;
       position: relative;
     }
-
-    body::before {
-      content: "VERTIGO";
+    .watermark {
       position: fixed;
-      top: 50%;
+      bottom: 20px;
       left: 50%;
-      transform: translate(-50%, -50%) rotate(-30deg);
+      transform: translateX(-50%);
       font-size: 5rem;
-      color: rgba(0, 0, 0, 0.05);
+      color: rgba(0,0,0,0.05);
       z-index: 0;
       pointer-events: none;
-      white-space: nowrap;
     }
-
-    .dark {
-      background: #1e1e1e;
-      color: #f5f5f5;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: auto;
+    #tables {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
       padding: 1rem;
+    }
+    .table {
+      background: white;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       position: relative;
       z-index: 1;
     }
-
-    .table {
-      background: white;
-      margin-bottom: 1rem;
-      padding: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: background 0.4s, color 0.4s;
-    }
-
-    .dark .table {
-      background: #2c2c2c;
-    }
-
     button {
       padding: 0.5rem 1rem;
-      margin: 0.3rem;
+      margin: 0.2rem;
       border: none;
-      border-radius: 6px;
-      background: #3498db;
+      border-radius: 5px;
+      background-color: #4CAF50;
       color: white;
       cursor: pointer;
-      transition: transform 0.2s ease, background 0.3s;
     }
-
     button:hover {
-      transform: scale(1.05);
-      background: #2980b9;
+      background-color: #45a049;
     }
-
-    .settled {
-      background: #2ecc71 !important;
+    #total, #controls {
+      text-align: center;
+      margin: 1rem;
+      font-size: 1.2rem;
     }
-
-    #mode-toggle {
+    #popup-overlay {
+      display: none;
       position: fixed;
-      top: 10px;
-      left: 10px;
-      font-size: 1.4rem;
-      background: none;
-      border: none;
-      cursor: pointer;
-      z-index: 100;
-      animation: pulse 1.5s infinite;
+      z-index: 9999;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
     }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-      100% { transform: scale(1); }
-    }
-
-    #end-day {
-      display: block;
-      margin: 2rem auto;
-      background: #e74c3c;
-    }
-
-    #total {
+    #popup {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
       text-align: center;
-      margin-top: 1rem;
-      font-weight: bold;
     }
-
-    #report {
-      margin-top: 1rem;
-      background: #f39c12;
-      padding: 0.5rem;
-      border-radius: 8px;
-      text-align: center;
+    #popup h2 {
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
-  <button id="mode-toggle">🌙</button>
-  <div class="container">
-    <h1 style="text-align: center;">مدیریت میزهای بازی</h1>
-    <div id="tables"></div>
+  <div class="watermark">Vertigo</div>
+
+  <div id="controls">
     <button onclick="addTable()">افزودن میز جدید</button>
-    <div id="total">جمع درآمد امروز: <span id="total-income">0</span> تومان</div>
-    <div id="report">گزارش تسویه شده‌ها: <span id="report-total">0</span> تومان</div>
-    <button id="end-day" onclick="endDay()">پایان روز کاری</button>
+    <button onclick="endDay()">پایان روز کاری</button>
+  </div>
+
+  <div id="tables"></div>
+
+  <div id="total">
+    جمع درآمد امروز: <span id="total-income">0</span> تومان
+  </div>
+
+  <div id="popup-overlay">
+    <div id="popup">
+      <h2 id="popup-title">درآمد امروز گیم‌نت ورتیگو</h2>
+      <p>مقدار: <span id="popup-income">0</span> تومان</p>
+      <button onclick="confirmEndDay()">تأیید</button>
+      <button onclick="closePopup()">لغو</button>
+    </div>
   </div>
 
   <script>
-    let tables = JSON.parse(localStorage.getItem("tables")) || [
+    let tables = [
       { id: 1, type: 'PS5', rate: 45000 },
       { id: 2, type: 'PS5', rate: 45000 },
       { id: 3, type: 'PS5', rate: 45000 },
@@ -134,18 +107,14 @@
       { id: 6, type: 'بیلیارد', rate: 100000 }
     ];
 
-    let totalIncome = parseInt(localStorage.getItem("totalIncome")) || 0;
-    let reportTotal = parseInt(localStorage.getItem("reportTotal")) || 0;
-    let startTimes = {};
-
+    let totalIncome = Number(localStorage.getItem('totalIncome')) || 0;
+    let startTimes = JSON.parse(localStorage.getItem('startTimes')) || {};
     const tableContainer = document.getElementById('tables');
-    const totalIncomeEl = document.getElementById("total-income");
-    const reportTotalEl = document.getElementById("report-total");
+    const totalDisplay = document.getElementById('total-income');
 
-    function saveState() {
-      localStorage.setItem("tables", JSON.stringify(tables));
-      localStorage.setItem("totalIncome", totalIncome);
-      localStorage.setItem("reportTotal", reportTotal);
+    function saveData() {
+      localStorage.setItem('totalIncome', totalIncome);
+      localStorage.setItem('startTimes', JSON.stringify(startTimes));
     }
 
     function renderTable(table) {
@@ -156,110 +125,98 @@
         <h2>میز ${table.id} (${table.type})</h2>
         <label>هزینه هر ساعت: <input type="number" id="rate-${table.id}" value="${table.rate}"></label><br>
         <p>زمان شروع: <span id="start-${table.id}">--:--:--</span></p>
-        <p>زمان پایان: <span id="end-${table.id}">--:--:--</span></p>
-        <p>مدت: <span id="duration-${table.id}">0:00</span></p>
+        <p>مدت: <span id="duration-${table.id}">--:--</span></p>
         <p>هزینه: <span id="cost-${table.id}">0</span> تومان</p>
         <button onclick="startGame(${table.id})">شروع</button>
         <button onclick="endGame(${table.id})">پایان</button>
         <button id="settle-${table.id}" onclick="settle(${table.id})">تسویه</button>
       `;
       tableContainer.appendChild(div);
+      if (startTimes[table.id]) {
+        document.getElementById(`start-${table.id}`).textContent = new Date(startTimes[table.id]).toLocaleTimeString('fa-IR');
+      }
     }
 
+    function updateTimers() {
+      for (const id in startTimes) {
+        const start = new Date(startTimes[id]);
+        const now = new Date();
+        const diffMs = now - start;
+        const mins = Math.floor(diffMs / 60000);
+        const hours = Math.floor(mins / 60);
+        const remMins = mins % 60;
+        const duration = `${hours.toString().padStart(2,'0')}:${remMins.toString().padStart(2,'0')}`;
+        const durEl = document.getElementById(`duration-${id}`);
+        if (durEl) durEl.textContent = duration;
+      }
+    }
+    setInterval(updateTimers, 1000);
+
     tables.forEach(renderTable);
-    totalIncomeEl.textContent = totalIncome.toLocaleString();
-    reportTotalEl.textContent = reportTotal.toLocaleString();
+    totalDisplay.textContent = totalIncome.toLocaleString();
 
     function startGame(id) {
       const now = new Date();
-      startTimes[id] = now;
+      startTimes[id] = now.toISOString();
       document.getElementById(`start-${id}`).textContent = now.toLocaleTimeString('fa-IR');
+      saveData();
     }
 
     function endGame(id) {
       const now = new Date();
-      const start = startTimes[id];
-      if (!start) {
-        alert('لطفاً ابتدا دکمه شروع را بزنید.');
+      const start = new Date(startTimes[id]);
+      if (!startTimes[id]) {
+        alert("اول دکمه شروع را بزنید.");
         return;
       }
-      document.getElementById(`end-${id}`).textContent = now.toLocaleTimeString('fa-IR');
-      const diffMs = now - start;
       const rate = parseInt(document.getElementById(`rate-${id}`).value);
+      const diffMs = now - start;
       const diffHours = diffMs / (1000 * 60 * 60);
       const cost = Math.ceil(diffHours * rate);
       document.getElementById(`cost-${id}`).textContent = cost.toLocaleString();
-      document.getElementById(`duration-${id}`).textContent = formatDuration(diffMs);
       totalIncome += cost;
-      totalIncomeEl.textContent = totalIncome.toLocaleString();
-      saveState();
+      totalDisplay.textContent = totalIncome.toLocaleString();
+      saveData();
     }
 
     function settle(id) {
-      const cost = parseInt(document.getElementById(`cost-${id}`).textContent.replace(/,/g, '')) || 0;
-      reportTotal += cost;
-      reportTotalEl.textContent = reportTotal.toLocaleString();
-      document.getElementById(`start-${id}`).textContent = "--:--:--";
-      document.getElementById(`end-${id}`).textContent = "--:--:--";
-      document.getElementById(`cost-${id}`).textContent = "0";
-      document.getElementById(`duration-${id}`).textContent = "0:00";
-      document.getElementById(`settle-${id}`).textContent = "تسویه شد";
-      document.getElementById(`settle-${id}`).classList.add("settled");
       delete startTimes[id];
-      saveState();
+      document.getElementById(`start-${id}`).textContent = "--:--:--";
+      document.getElementById(`duration-${id}`).textContent = "--:--";
+      document.getElementById(`cost-${id}`).textContent = "0";
+      document.getElementById(`settle-${id}`).textContent = "تسویه شد";
+      document.getElementById(`settle-${id}`).disabled = true;
+      saveData();
     }
 
     function addTable() {
-      const type = prompt("نوع میز را وارد کنید (مثلاً PS5 یا بیلیارد):", "PS5");
-      if (!type) return;
-      const rate = type === 'بیلیارد' ? 100000 : 45000;
       const newId = tables.length + 1;
+      const type = prompt("نوع میز را وارد کنید (مثلاً PS5 یا بیلیارد):", "PS5");
+      let rate = type === 'بیلیارد' ? 100000 : 45000;
       const newTable = { id: newId, type, rate };
       tables.push(newTable);
       renderTable(newTable);
-      saveState();
-    }
-
-    function formatDuration(ms) {
-      const totalSeconds = Math.floor(ms / 1000);
-      const minutes = Math.floor(totalSeconds / 60);
-      const seconds = totalSeconds % 60;
-      return `${minutes}:${seconds.toString().padStart(2, '0')}`;
     }
 
     function endDay() {
-      if (confirm("آیا از پایان روز کاری مطمئن هستید؟ مقادیر صفر می‌شوند.")) {
-        alert(`درآمد امروز گیم‌نت Vertigo: ${totalIncome.toLocaleString()} تومان\nروز کاری تمام شد.`);
-        totalIncome = 0;
-        reportTotal = 0;
-        localStorage.removeItem("tables");
-        localStorage.removeItem("totalIncome");
-        localStorage.removeItem("reportTotal");
-        location.reload();
-      }
+      document.getElementById("popup-income").textContent = totalIncome.toLocaleString();
+      document.getElementById("popup-overlay").style.display = 'flex';
     }
 
-    // تم تاریک با حافظه localStorage
-    const toggle = document.getElementById("mode-toggle");
-
-    function applyTheme() {
-      const theme = localStorage.getItem("theme");
-      if (theme === "dark") {
-        document.body.classList.add("dark");
-        toggle.textContent = "☀️";
-      } else {
-        document.body.classList.remove("dark");
-        toggle.textContent = "🌙";
-      }
+    function confirmEndDay() {
+      totalIncome = 0;
+      startTimes = {};
+      localStorage.removeItem('totalIncome');
+      localStorage.removeItem('startTimes');
+      document.getElementById('total-income').textContent = "0";
+      tableContainer.innerHTML = "";
+      tables.forEach(renderTable);
+      document.getElementById("popup-overlay").style.display = 'none';
     }
 
-    applyTheme();
-
-    toggle.addEventListener("click", () => {
-      const isDark = document.body.classList.toggle("dark");
-      localStorage.setItem("theme", isDark ? "dark" : "light");
-      toggle.textContent = isDark ? "☀️" : "🌙";
-    });
+    function closePopup() {
+      document.getElementById("popup-overlay").style.display = 'none';
+    }
   </script>
 </body>
 </html>
